Fix redesign message in dark mode

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -32,4 +32,8 @@ header[role=banner] {
   margin-top: 1rem;
   padding: 1rem;
   background-color: #f4f4f4;
+  @media screen and (prefers-color-scheme: dark) {
+    background-color: rgba(255,255,255,0.05);
+  }
+
 }
